# 2018_codinggame_zombies

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCpputest.cmake  cmc-conan.cmake  cmc-cpp.cmake  cmc-find.cmake  cmc-install.cmake  cmc-macros.cmake
conan/: conanfile.py
src/apps/: CMakeLists.txt
src/apps/CocoaApp/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  MainMenu.xib  main.mm
src/apps/CocoaNiblessApp/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  main.mm
src/apps/ConsoleApp/: CMakeLists.txt
src/apps/Invasion/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/libExample/: CMakeLists.txt
src/libs/zombies/: CMakeLists.txt  helpers.cpp  helpers.h  web.cpp  web.h
